--- a/projects.html
+++ b/projects.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
-        integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Abramova's Portfolio</title>
-</head>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
+            integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous" />
+    
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Iceland&family=Major+Mono+Display&family=Nunito&family=Oxanium&display=swap" rel="stylesheet"> 
+    
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+        <link rel="stylesheet" href="style.css" />
+        <title>Abramova's Portfolio</title>
+    </head>
 
-<body>
+<body> 
     <!--Navbar-->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
@@ -43,13 +47,26 @@
             </div>
         </div>
     </nav>
-    <div id="particles-js"></div>
 
     <section class="section-about">
         <h2>Portfolio</h2>
+        <hr><br>
         <div class="spacer"></div>
         <h4>Professional (2021 - present):</h4>
         <div class="container-fluid row padding">
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <a href="https://vahlthwf.gmu.edu/">
+                            <img class="card-img-top embed-responsive-item" src="images/PRSS.png"></a>
+                    </div>
+                    <div class="card-body">
+                        <h4 class="card-title">GMU Center for Health Workforce</h4>
+                        <p class="card-text">Made with WordPress</p>
+                        <a href="https://vahlthwf.gmu.edu/" class="btn-btn-outline-secondary">Project</a>
+                    </div>
+                </div>
+            </div>
             <div class="col-md-4">
                 <div class="card">
                     <div class="embed-responsive embed-responsive-16by9">
@@ -224,13 +241,6 @@
         </div>
         <div class="spacer"></div>
         <h4>Other Projects:</h4>
-        <h5>
-            <ul>
-                <li>Unity and C# Video Game: <a
-                        href=" https://gadig.itch.io/attack-of-the-magic-cardboard ">https://gadig.itch.io/attack-of-the-magic-cardboard</a>
-                </li>
-            </ul>
-        </h5>
         <div class="container-fluid row padding">
             <div class="col-md-4">
                 <div class="card">
