--- a/resume.html
+++ b/resume.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
-        integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Abramova's Portfolio</title>
-</head>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
+            integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous" />
+    
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Iceland&family=Major+Mono+Display&family=Nunito&&family=Oxanium&display=swap" rel="stylesheet"> 
+    
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+        <link rel="stylesheet" href="style.css" />
+        <title>Abramova's Portfolio</title>
+    </head>
 
 <body>
     <!--Navbar-->
@@ -43,16 +47,19 @@
             </div>
         </div>
     </nav>
-    <div id="particles-js"></div>
 
-    <section class="section-about">
+    <section class="section-about section-resume">
         <h2>Resume</h2>
+        <hr><br>
         <div class="spacer"></div>
         <h5>Click below to view as a PDF:</h5>
         <div class="spacer"></div>
         <p><a class="btn btn-primary btn-lg"
                 href="https://drive.google.com/file/d/1fCr3lnx3VmY-lbWhC3TsAY9yfkYS2wLq/view?usp=sharing"
                 role="button"><i class="fas fa-file-download"></i> Resume (PDF)</a></p>
+                <div class="img-wrapper">
+                <img class="resume-img" src="images/resume1.svg">
+                </div>
     </section>
 
     <!-- Optional JavaScript -->
