--- a/about.html
+++ b/about.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
-        integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Abramova's Portfolio</title>
-</head>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
+            integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous" />
+    
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Iceland&family=Major+Mono+Display&family=Nunito&family=Oxanium&display=swap" rel="stylesheet"> 
+    
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+        <link rel="stylesheet" href="style.css" />
+        <title>Abramova's Portfolio</title>
+    </head>
 
 <body>
     <!--Navbar-->
@@ -43,59 +47,44 @@
             </div>
         </div>
     </nav>
-    <div id="particles-js"></div>
 
     <section class="section-about">
         <h2>About Me</h2>
+        <hr><br>
         <div class="spacer"></div>
-        <h5>My name is Maria Abramova and I am a Web Developer looking to gain more professional experience in front-end
-            engineering.
-            I am a fast and motivated learner and quickly pick up on any new skills needed for the role.</h5>
+
+        <div class="row">
+            <div class="col-md-8">
+                <h5>I am Ari Abramova and I am a Web Developer looking to gain professional experience in front-end
+                    development. My skillset comes from university education, professional experience, online courses, and
+                    personal practice projects. I am a fast and motivated learner and quickly pick up on any new skills needed for the role.</h5>
+            </div>
+            <div class="col-md-4"><img class="about-img" src="images/coding1.svg"></div>
+          </div>
         <br>
-        <h5>My web development experience includes:
+        <h5><b>Web Development Experience:</b>
             <ul>
-                <li>Web Admin and Developer at George Mason University (2021 - present)</li>
-                <ul>
-                    <li>Adds and edits website content using HTML, CSS, and JavaScript
-                    </li>Manages websites to ensure security, performance, and functionality by using administrator
-                    tools
-                    <li>Configures user organizations, builds user data reports, performs various site maintenance tasks
-                    </li>
-                    <li>Works in a team to communicate with clients and partners to meet their goals
-                    </li>
-                    <li>Websites:</li>
-                    <ul>
-                        <li>GMU PRSS: <a href="https://prss.gmu.edu/">https://prss.gmu.edu/</a></li>
-                        <li>Claude Moore Scholars Community: <a
-                                href="https://claudemoorescholars.org/">https://claudemoorescholars.org/</a></li>
-                        <li>Claude Moore Scholars GMU: <a
-                                href="https://claudemoorescholars.gmu.edu/">https://claudemoorescholars.gmu.edu/</a>
-                        </li>
-                    </ul>
-                </ul>
+                <li>Web Admin and Developer at George Mason University (Jan 2021 - present)</li>
                 <li>Web Developer Intern at I&O Law Firm (2020)</li>
-                <ul>
-                    <li>Used HTML, CSS, and JavaScript to edit website features and appearance</li>
-                    <li>Used WordPress website building tools to develop a company website</li>
-                    <li>Configured the website to optimize user interface and site performance
-                    </li>
-                    <li>Worked on site analytics and SEO optimization
-                    </li>
-                </ul>
                 <li>Web Developer Intern at Learnix Inc (2020)</li>
+            </ul>
+        </h5>
+        <br>
+        <h5><b>Education:</b>
+            <ul>
+                <li>George Mason University (2020 - present), Computer Science</li>
                 <ul>
-                    <li>Used Wix to develop a company website</li>
-                    <li>Configured the website to optimize user interface and site performance</li>
-                    <li>Worked on site analytics and SEO optimization</li>
-                    <li>Website:</li>
-                    <ul>
-                        <li>IPIKRE: <a href="https://alisagordeeva1.wixsite.com/ipikre">https://alisagordeeva1.wixsite.com/ipikre</a></li>
-                    </ul>
+                    <li>Courses: Python, Java, Web Development</li>
+                </ul>
+                <li>Online courses:</li>
+                <ul>
+                    <li>Udemy: The Complete Web Developer in 2022: Zero to Mastery</li>
+                    <li>Udemy: The Complete JavaScript Course 2022: From Zero to Expert</li>
                 </ul>
             </ul>
         </h5>
         <br>
-        <h5>Programming Skills:</h5>
+        <h5><b>Programming Skills:</b></h5>
         <h5>
             <ul>
                 <li>HTML, CSS, JavaScript</li>
@@ -105,9 +94,12 @@
             </ul>
         </h5>
         <br>
-        <h5><i class="fas fa-envelope"></i> Email: <a href="mailto:mabramo@gmu.edu"> mabramo@gmu.edu </a></h5>
+        <h5><i class="fas fa-envelope"></i> Email: <a href="mailto:ariabramova1@gmail.com"> ariabramova1@gmail.com </a>
+        </h5>
         <h5><i class="fab fa-github"></i> GitHub: <a href="https://github.com/ari-abr/">https://github.com/ari-abr/</a>
-        <h5><i class="fab fa-linkedin"></i> LinkedIn: <a href="https://www.linkedin.com/in/maria-a-5885751a3/">https://www.linkedin.com/in/maria-a-5885751a3/</a>
+        </h5>
+        <h5><i class="fab fa-linkedin"></i> LinkedIn: <a
+                href="https://www.linkedin.com/in/ari-a-5885751a3/">https://www.linkedin.com/in/ari-a-5885751a3/</a>
         </h5>
     </section>
 
