--- a/index.html
+++ b/index.html
@@ -9,13 +9,21 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
         integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Bungee+Hairline&family=Iceland&family=Major+Mono+Display&family=Nunito&&family=Oxanium&display=swap" rel="stylesheet"> 
+
+        <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+      />
     <link rel="stylesheet" href="style.css" />
     <title>Abramova's Portfolio</title>
 </head>
 
 <body>
+
     <!--Navbar-->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
@@ -43,21 +51,20 @@
             </div>
         </div>
     </nav>
-    <div id="particles-js"></div>
     <!--Home page-->
     <section id="home" class="section-home">
         <div class="container-fluid row">
             <div class="col-lg-8 col-md-8">
-                <h1 class="display-2">Maria Abramova</h1>
-                <h1 class="display-4">Web Developer</h1>
+                <h1 class="display-2 animate__animated animate__fadeIn">ari abramova</h1>
+                <h1 class="display-4 animate__animated animate__fadeIn">web developer</h1>
                 <br>
-                <p><a class="btn btn-primary btn-lg button-home" href="about.html" role="button">Learn more</a>
+                <p><a class="btn btn-primary btn-lg button-home animate__animated animate__fadeIn" href="about.html" role="button">Learn more</a>
                 </p>
             </div>
             <div class="col-lg-4 col-md-4 services-list">
                 <h2><i class="far fa-file-code"></i> HTML, CSS, JavaScript </h2>
                 <h2><i class="fab fa-react"></i> Node.js, React.js </h2>
-                <h2><i class="fab fa-wordpress"></i> WordPress, SEO </h2>
+                <h2><i class="fab fa-wordpress"></i> CEO, WordPress </h2>
                 <h2><i class="fab fa-python"></i> Python, Java </h2>
             </div>
         </div>
