--- a/projects.html
+++ b/projects.html
@@ -257,6 +257,20 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <a href="https://gadig.itch.io/attack-of-the-magic-cardboard">
+                            <img class="card-img-top embed-responsive-item" src="https://img.itch.zone/aW1nLzU5Njg4OTQucG5n/original/y1j2GL.png"></a>
+                    </div>
+                    <div class="card-body">
+                        <h4 class="card-title">(Video Game) Attack of the Magic Cardboard</h4>
+                        <p class="card-text">Video game made with C# and Unity, worked in a developer team using GitLab</p>
+                        <a href="https://gadig.itch.io/attack-of-the-magic-cardboard"
+                            class="btn-btn-outline-secondary">Project </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
