--- a/about.html
+++ b/about.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
-            integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous" />
-    
-            <link rel="preconnect" href="https://fonts.googleapis.com">
-            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Iceland&family=Major+Mono+Display&family=Nunito&family=Oxanium&display=swap" rel="stylesheet"> 
-    
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-        <link rel="stylesheet" href="style.css" />
-        <title>Abramova's Portfolio</title>
-    </head>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
+        integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Iceland&family=Major+Mono+Display&family=Nunito&family=Oxanium&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Abramova's Portfolio</title>
+</head>
 
 <body>
     <!--Navbar-->
@@ -55,15 +57,16 @@
 
         <div class="row">
             <div class="col-md-8">
-                <h5>I am Ari Abramova and I am a Web Developer looking to gain professional experience in front-end
-                    development. My skillset comes from university education, professional experience, online courses, and
-                    personal practice projects. I am a fast and motivated learner and quickly pick up on any new skills needed for the role.</h5>
+                <h5>I am a Front-End Developer looking to gain professional experience. My skillset comes from
+                    university education, professional experience, online courses, and personal practice projects. I am
+                    a fast and motivated learner and quickly pick up on any new skills needed for the role.</h5>
             </div>
             <div class="col-md-4"><img class="about-img" src="images/coding1.svg"></div>
-          </div>
+        </div>
         <br>
-        <h5><b>Web Development Experience:</b>
+        <h5><b>Front-End / Web Development Experience:</b>
             <ul>
+                <li>Software Developer Intern (Aug 2022 - December 2022)</li>
                 <li>Web Admin and Developer at George Mason University (Jan 2021 - present)</li>
                 <li>Web Developer Intern at I&O Law Firm (2020)</li>
                 <li>Web Developer Intern at Learnix Inc (2020)</li>
@@ -72,9 +75,10 @@
         <br>
         <h5><b>Education:</b>
             <ul>
-                <li>George Mason University (2020 - present), Computer Science</li>
+                <li>Western Governors University (October 2022 - May 2023): Bachelor of Science in Computer Science</li>
+                <li>George Mason University (Aug 2020 - Sept 2022): studied for Bachelor of Science in Computer Science, transfered to WGU </li>
                 <ul>
-                    <li>Courses: Python, Java, Web Development</li>
+                    <li>Courses: Python, Java</li>
                 </ul>
                 <li>Online courses:</li>
                 <ul>
@@ -89,8 +93,8 @@
             <ul>
                 <li>HTML, CSS, JavaScript</li>
                 <li>React.js, Node.js, Bootstrap</li>
-                <li>Python, Java, Git</li>
-                <li>Using databases and APIs</li>
+                <li>Python, OOP (Java), Git, GitHub</li>
+                <li>Databases and APIs</li>
             </ul>
         </h5>
         <br>
