--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="col-lg-4 col-md-4 services-list">
                 <h2><i class="far fa-file-code"></i> HTML, CSS, JavaScript </h2>
                 <h2><i class="fab fa-react"></i> Node.js, React.js </h2>
-                <h2><i class="fab fa-wordpress"></i> CEO, WordPress </h2>
+                <h2><i class="fab fa-wordpress"></i> SQL, APIs, WordPress </h2>
                 <h2><i class="fab fa-python"></i> Python, Java </h2>
             </div>
         </div>
