--- a/projects.html
+++ b/projects.html
@@ -57,11 +57,24 @@
             <div class="col-md-4">
                 <div class="card">
                     <div class="embed-responsive embed-responsive-16by9">
+                        <a href="https://vahlthwf.connectedcommunity.org/home">
+                            <img class="card-img-top embed-responsive-item" src="images/PRSS.png"></a>
+                    </div>
+                    <div class="card-body">
+                        <h4 class="card-title">GMU Center for Health Workforce 2</h4>
+                        <p class="card-text">Made with Higher Logic</p>
+                        <a href="https://vahlthwf.connectedcommunity.org/home" class="btn-btn-outline-secondary">Project</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="embed-responsive embed-responsive-16by9">
                         <a href="https://vahlthwf.gmu.edu/">
                             <img class="card-img-top embed-responsive-item" src="images/PRSS.png"></a>
                     </div>
                     <div class="card-body">
-                        <h4 class="card-title">GMU Center for Health Workforce</h4>
+                        <h4 class="card-title">GMU Center for Health Workforce 1</h4>
                         <p class="card-text">Made with WordPress</p>
                         <a href="https://vahlthwf.gmu.edu/" class="btn-btn-outline-secondary">Project</a>
                     </div>
@@ -265,7 +278,7 @@
                     </div>
                     <div class="card-body">
                         <h4 class="card-title">(Video Game) Attack of the Magic Cardboard</h4>
-                        <p class="card-text">Video game made with C# and Unity, worked in a developer team using GitLab</p>
+                        <p class="card-text">Video game made with C# and Unity, worked in a developer team using GitLab.</p>
                         <a href="https://gadig.itch.io/attack-of-the-magic-cardboard"
                             class="btn-btn-outline-secondary">Project </a>
                     </div>
