--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 
         <div class="row">
             <div class="col-md-8">
-                <h5>I am a Front-End Developer looking to gain professional experience. My skillset comes from
+                <h5>I am a junior Front-End Developer looking to gain professional experience and grow my career. My skillset comes from
                     university education, professional experience, online courses, and personal practice projects. I am
                     a fast and motivated learner and quickly pick up on any new skills needed for the role.</h5>
             </div>
@@ -66,7 +66,7 @@
         <br>
         <h5><b>Front-End / Web Development Experience:</b>
             <ul>
-                <li>Software Developer Intern (Aug 2022 - December 2022)</li>
+                <li>Software Developer Intern (Aug 2022 - Dec 2022)</li>
                 <li>Web Admin and Developer at George Mason University (Jan 2021 - present)</li>
                 <li>Web Developer Intern at I&O Law Firm (2020)</li>
                 <li>Web Developer Intern at Learnix Inc (2020)</li>
@@ -76,7 +76,7 @@
         <h5><b>Education:</b>
             <ul>
                 <li>Western Governors University (October 2022 - May 2023): Bachelor of Science in Computer Science</li>
-                <li>George Mason University (Aug 2020 - Sept 2022): studied for Bachelor of Science in Computer Science, transfered to WGU </li>
+                <li>George Mason University (Aug 2020 - Sept 2022): studied for Bachelor of Science in Computer Science, transferred to WGU to complete my degree </li>
                 <ul>
                     <li>Courses: Python, Java</li>
                 </ul>
