--- a/projects.html
+++ b/projects.html
@@ -168,7 +168,7 @@
                         <h4 class="card-title">Image Recognition App</h4>
                         <p class="card-text">A web app that outputs concepts found in an image, allows user registration
                             and user data storage. It's connected to a server and user database. Made with HTML, CSS,
-                            Javascript, PreSQL, and React.</p>
+                            JavaScript, PreSQL, and React.js.</p>
                         <a href="https://serene-badlands-49462.herokuapp.com/" class="btn-btn-outline-secondary">Project
                             </a>
                         <br>
@@ -186,7 +186,7 @@
                     <div class="card-body">
                         <h4 class="card-title">Budgeting App</h4>
                         <p class="card-text">A website that allows the user to submit forms and performs actions with
-                            user input. Made with HTML, CSS, Javascript, and Bootstrap.</p>
+                            user input. Made with HTML, CSS, JavaScript, and Bootstrap.</p>
                         <a href="https://ari-abr.github.io/Budget-Calculator/" class="btn-btn-outline-secondary">Project
                             </a>
                         <br>
@@ -204,7 +204,7 @@
                         <h4 class="card-title">Recipe App</h4>
                         <p class="card-text">A web app that allows the user to browse through a database. It's connected
                             to a user database, allows user registration, and stores data. Made with HTML, CSS,
-                            Javascript, Bootstrap, Webpack, and Firebase.</p>
+                            JavaScript, Bootstrap, Webpack, and Firebase.</p>
                         <a href="https://recipe-land-app.herokuapp.com/" class="btn-btn-outline-secondary">Project
                             </a>
                         <br>
