--- a/resume.html
+++ b/resume.html
@@ -52,7 +52,7 @@
         <h2>Resume</h2>
         <hr><br>
         <div class="spacer"></div>
-        <h5>Click below to view as a PDF:</h5>
+        <h5>Click below to view the resume as a PDF:</h5>
         <div class="spacer"></div>
         <p><a class="btn btn-primary btn-lg"
                 href="https://drive.google.com/file/d/18EtRz2dlrorO08SVkeQcVWrU8fJY4a00/view?usp=sharing"
