--- a/about.html
+++ b/about.html
@@ -56,48 +56,67 @@
         <div class="spacer"></div>
 
         <div class="row">
-            <div class="col-md-8">
-                <h5>I am a junior Front-End Developer looking to gain professional experience and grow my career. My skillset comes from
-                    university education, professional experience, online courses, and personal practice projects. I am
-                    a fast and motivated learner and quickly pick up on any new skills needed for the role.</h5>
+            <div class="col-md-9">
+                <h5>Hi, I’m Ari! I am a junior Front-End Software Developer excited for opportunities to contribute my
+                    skill set to and grow my career. My skill set comes from nearly 3 years of university education,
+                    professional experience, online courses, and personal practice projects and I look forward to
+                    continuing learning more on my coding journey!</h5>
             </div>
-            <div class="col-md-4"><img class="about-img" src="images/coding1.svg"></div>
+            <div class="col-md-3"><img class="about-img" src="images/coding1.svg"></div>
         </div>
         <br>
-        <h5><b>Front-End / Web Development Experience:</b>
-            <ul>
+        <h5><b>My Coding Journey:</b></h5>
+        <div class="row">
+            <div class="col-md-12">
+                <h6>After discovering the magic of HTML tags to customize my Tumblr blog back in middle school, I became
+                    curious about the inner workings of front-end development. Throughout high school I tried a variety
+                    of programming languages and found that web development - as compared to other fields - allows me to
+                    showcase my visual and creative side and genuinely have fun coding. So when the COVID-19 pandemic
+                    came and high school went remote, I used all my free time to take online courses and began building
+                    first projects. The following year I landed my first two internships and a part-time job.
+                </h6>
+                <h6>
+                    Through my experience the past 3 years, I have gained professional and practical experience further
+                    advancing my skills. Because I am confident in my passion and career plans, I have transferred to a
+                    university better suited for my fast self-guided learning style and plan to graduate a year early!
+                </h6>
+            </div>
+        </div>
+        <br>
+        <h5><b>Front-End / Web Development Experience:</b></h5>
+        <h6>
+              <ul>
                 <li>Software Developer Intern (Aug 2022 - Dec 2022)</li>
                 <li>Web Admin and Developer at George Mason University (Jan 2021 - present)</li>
                 <li>Web Developer Intern at I&O Law Firm (2020)</li>
                 <li>Web Developer Intern at Learnix Inc (2020)</li>
             </ul>
-        </h5>
-        <br>
-        <h5><b>Education:</b>
+        </h6>
+        <h5><b>Education:</b></h5>
+        <h6>
             <ul>
                 <li>Western Governors University (October 2022 - May 2023): Bachelor of Science in Computer Science</li>
-                <li>George Mason University (Aug 2020 - Sept 2022): studied for Bachelor of Science in Computer Science, transferred to WGU to complete my degree </li>
-                <ul>
-                    <li>Courses: Python, Java</li>
-                </ul>
+                <li>George Mason University (Aug 2020 - Sept 2022): studied for Bachelor of Science in Computer Science,
+                    transferred to WGU to complete my degree </li>
                 <li>Online courses:</li>
                 <ul>
                     <li>Udemy: The Complete Web Developer in 2022: Zero to Mastery</li>
                     <li>Udemy: The Complete JavaScript Course 2022: From Zero to Expert</li>
                 </ul>
             </ul>
-        </h5>
-        <br>
+        </h6>
         <h5><b>Programming Skills:</b></h5>
-        <h5>
+        <h6>
             <ul>
                 <li>HTML, CSS, JavaScript</li>
                 <li>React.js, Node.js, Bootstrap</li>
-                <li>Python, OOP (Java), Git, GitHub</li>
-                <li>Databases and APIs</li>
+                <li>APIs, Databases, Git, GitHub</li>
+                <li>Python, OOP (Java)</li>
             </ul>
-        </h5>
+        </h6>
+        <hr>
         <br>
+        <div class="spacer"></div>
         <h5><i class="fas fa-envelope"></i> Email: <a href="mailto:ariabramova1@gmail.com"> ariabramova1@gmail.com </a>
         </h5>
         <h5><i class="fab fa-github"></i> GitHub: <a href="https://github.com/ari-abr/">https://github.com/ari-abr/</a>
