--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
-        integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous" />
+        <script src="https://kit.fontawesome.com/e379fbe8c9.js" crossorigin="anonymous"></script>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -64,8 +63,8 @@
             <div class="col-lg-4 col-md-4 services-list">
                 <h2><i class="far fa-file-code"></i> HTML, CSS, JavaScript </h2>
                 <h2><i class="fab fa-react"></i> Node.js, React.js </h2>
-                <h2><i class="fab fa-wordpress"></i> SQL, APIs, WordPress </h2>
-                <h2><i class="fab fa-python"></i> Python, Java </h2>
+                <h2><i class="fa-solid fa-database"></i> APIs, Databases</h2>
+                <h2><i class="fa-brands fa-git-alt"></i> Git, WordPress</h2>
             </div>
         </div>
 
