--- a/about.html
+++ b/about.html
@@ -83,9 +83,34 @@
             </div>
         </div>
         <br>
+        <div class="row">
+            <div class="col-md-6">
+                <h5><b>Programming Skills:</b></h5>
+                <h6>
+                    <ul>
+                        <li>HTML, CSS, JavaScript</li>
+                        <li>Node.js, React.js, Vue.js</li>
+                        <li>APIs, Databases, Python, SQL</li>
+                        <li>Git, GitHub, GitLab</li>
+                        <li>WordPress, Figma</li>
+                    </ul>
+                </h6>
+            </div>
+            <div class="col-md-6">
+                <h5><b>Soft Skills:</b></h5>
+                <h6>
+                    <ul>
+                        <li>Fast and disciplined self-learning</li>
+                        <li>Organized and strategic problem-solving approach</li>
+                        <li>Clear communication and collaboration with other team members</li>
+                        <li>Languages: English (fluent), Russian (fluent), French (basic), Mandarin Chinese (basic)</li>
+                    </ul>
+                </h6>
+            </div>
+        </div>
         <h5><b>Front-End / Web Development Experience:</b></h5>
         <h6>
-              <ul>
+            <ul>
                 <li>Software Developer Intern (Aug 2022 - Dec 2022)</li>
                 <li>Web Admin and Developer at George Mason University (Jan 2021 - present)</li>
                 <li>Web Developer Intern at I&O Law Firm (2020)</li>
@@ -103,15 +128,6 @@
                     <li>Udemy: The Complete Web Developer in 2022: Zero to Mastery</li>
                     <li>Udemy: The Complete JavaScript Course 2022: From Zero to Expert</li>
                 </ul>
-            </ul>
-        </h6>
-        <h5><b>Programming Skills:</b></h5>
-        <h6>
-            <ul>
-                <li>HTML, CSS, JavaScript</li>
-                <li>React.js, Node.js, Bootstrap</li>
-                <li>APIs, Databases, Git, GitHub</li>
-                <li>Python, OOP (Java)</li>
             </ul>
         </h6>
         <hr>
