--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="style.css" />
-    <title>Abramova's Portfolio</title>
+    <title>Abramov's Portfolio</title>
 </head>
 
 <body>
@@ -57,8 +57,8 @@
 
         <div class="row">
             <div class="col-md-9">
-                <h5>Hi, I’m Ari! I am a junior Front-End Software Developer excited for opportunities to contribute my
-                    skill set to and grow my career. My skill set comes from nearly 3 years of university education,
+                <h5>Hello! I am a Software Developer excited for opportunities to contribute my
+                    skill set to and grow my career. My skill set comes from university education,
                     professional experience, online courses, and personal practice projects and I look forward to
                     continuing learning more on my coding journey!</h5>
             </div>
@@ -85,16 +85,18 @@
                         <li>Fast and disciplined self-learning</li>
                         <li>Organized and strategic problem-solving approach</li>
                         <li>Clear communication and collaboration with other team members</li>
-                        <li>Languages: English (fluent), Russian (fluent), French (basic), Mandarin Chinese (basic)</li>
+                        <li>Languages (the non-programming ones): Russian (fluent), French (basic), Mandarin Chinese (basic)</li>
                     </ul>
                 </h6>
             </div>
         </div>
-        <h5><b>Front-End / Web Development Experience:</b></h5>
+        <h5><b>Full-Stack / Web Development Experience:</b></h5>
         <h6>
             <ul>
-                <li>Software Developer Intern (Aug 2022 - Dec 2022)</li>
-                <li>Web Admin and Developer at George Mason University (Jan 2021 - present)</li>
+                <li>Associate Agile Software Developer at Freddie Mac (June 2024 - present)</li>
+                <li>Junior Software Developer Intern at Center for Policing Equity (May 2023 - Dec 2023)</li>
+                <li>Software Developer Intern at Center for Policing Equity (Aug 2022 - May 2023)</li>
+                <li>Web Admin and Developer at George Mason University (Jan 2021 - Aug 2024)</li>
                 <li>Web Developer Intern at I&O Law Firm (2020)</li>
                 <li>Web Developer Intern at Learnix Inc (2020)</li>
             </ul>
@@ -107,7 +109,8 @@
                     transferred to WGU to complete my degree </li>
                 <li>Online courses:</li>
                 <ul>
-                    <li>Udemy: The Complete Web Developer in 2022: Zero to Mastery</li>
+                    <li>SAS Code Fundamentals</li>
+                    <li>Udemy: The Complete Web Developer in 2022: Zero to Mastery (HTML, CSS, JavaScript, React)</li>
                     <li>Udemy: The Complete JavaScript Course 2022: From Zero to Expert</li>
                 </ul>
             </ul>
