--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
       />
     <link rel="stylesheet" href="style.css" />
-    <title>Abramova's Portfolio</title>
+    <title>Abramov's Portfolio</title>
 </head>
 
 <body>
@@ -54,17 +54,17 @@
     <section id="home" class="section-home">
         <div class="container-fluid row">
             <div class="col-lg-8 col-md-8">
-                <h1 class="display-2 animate__animated animate__fadeIn">ari abramova</h1>
-                <h1 class="display-4 animate__animated animate__fadeIn">web developer</h1>
+                <h1 class="display-2 animate__animated animate__fadeIn">ruslan abramov</h1>
+                <h1 class="display-4 animate__animated animate__fadeIn">software engineer</h1>
                 <br>
                 <p><a class="btn btn-primary btn-lg button-home animate__animated animate__fadeIn" href="about.html" role="button">Learn more</a>
                 </p>
             </div>
             <div class="col-lg-4 col-md-4 services-list">
-                <h2><i class="far fa-file-code"></i> HTML, CSS, JavaScript </h2>
-                <h2><i class="fab fa-react"></i> Node.js, React.js </h2>
-                <h2><i class="fa-solid fa-database"></i> APIs, Databases</h2>
-                <h2><i class="fa-brands fa-git-alt"></i> Git, WordPress</h2>
+                <h2><i class="far fa-file-code"></i> JavaScript Frameworks </h2>
+                <h2><i class="fab fa-react"></i> Python, Java </h2>
+                <h2><i class="fa-solid fa-database"></i> APIs, Databases </h2>
+                <h2><i class="fa-brands fa-git-alt"></i> Agile Development </h2>
             </div>
         </div>
 
