--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
     
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
         <link rel="stylesheet" href="style.css" />
-        <title>Abramova's Portfolio</title>
+        <title>Abramov's Portfolio</title>
     </head>
 
 <body> 
