--- a/resume.html
+++ b/resume.html
@@ -54,12 +54,13 @@
         <div class="spacer"></div>
         <h5>Click below to view the resume as a PDF:</h5>
         <div class="spacer"></div>
-        <p><a class="btn btn-primary btn-lg"
+        <p> Resume will be uploaded soon (as of 09/09/24). </p>
+        <!--<p><a class="btn btn-primary btn-lg"
                 href="https://drive.google.com/file/d/1ruk5eBa8XEMhU1Ne7gA69QQiRZuvlslw/view?usp=sharing"
                 role="button"><i class="fas fa-file-download"></i> Resume (PDF)</a></p>
                 <div class="img-wrapper">
                 <img class="resume-img" src="images/resume1.svg">
-                </div>
+                </div>-->
     </section>
 
     <!-- Optional JavaScript -->
