--- a/projects.html
+++ b/projects.html
@@ -139,6 +139,7 @@
         </div>
         <br>
         <h4>Personal Projects - Web Applications and Sites:</h4>
+        <p>  Note: the project links will be getting updated soon due to the technical issues on their previous hosting platform (as of 09/09/24).</p>
         <div class="container-fluid row padding">
             <div class="col-md-4">
                 <div class="card">
