--- a/index.html
+++ b/index.html
@@ -22,54 +22,7 @@
 </head>
 
 <body>
-
-    <!--Navbar-->
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="projects.html">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="resume.html">Resume</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!--Home page-->
-    <section id="home" class="section-home">
-        <div class="container-fluid row">
-            <div class="col-lg-8 col-md-8">
-                <h1 class="display-2 animate__animated animate__fadeIn">ruslan abramov</h1>
-                <h1 class="display-4 animate__animated animate__fadeIn">software engineer</h1>
-                <br>
-                <p><a class="btn btn-primary btn-lg button-home animate__animated animate__fadeIn" href="about.html" role="button">Learn more</a>
-                </p>
-            </div>
-            <div class="col-lg-4 col-md-4 services-list">
-                <h2><i class="far fa-file-code"></i> JavaScript Frameworks </h2>
-                <h2><i class="fab fa-react"></i> Python, Java </h2>
-                <h2><i class="fa-solid fa-database"></i> APIs, Databases </h2>
-                <h2><i class="fa-brands fa-git-alt"></i> Agile Development </h2>
-            </div>
-        </div>
-
-    </section>
-
+    <h1> New portfolio website: <a href="https://ruslanscode.wordpress.com/">https://ruslanscode.wordpress.com/</a></h1>
 
     </section>
 
